# simply-proxy

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  cliff.toml  deny.toml  test.rest
docs/: proxy-design.md
examples/: server.rs
fixtures/: app.yml  sample.yml
fixtures/certs/: api.acme.com.crt  api.acme.com.key  wildcard.acme.com.crt  wildcard.acme.com.key
src/: lib.rs  main.rs  utils.rs
src/conf/: mod.rs  raw.rs  resolved.rs
src/proxy/: health.rs  mod.rs  route.rs  simple_proxy.rs
src/rate_limit/: limiter.rs
